force-app/main/default/objects/FEC_Undelivered_Card__c/FEC_Undelivered_Card__c.object-meta.xml
<CustomObject>
    <label>Undelivered Card</label>
    <nameField>
        <displayFormat>UDC-{0}</displayFormat>
        <label>Undelivered Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Undelivered Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>