force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Delay_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delay_Code__c</fullName>
    <label>Delay Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>