force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Delay_Notes__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delay_Notes__c</fullName>
    <label>Delay Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>