force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Notes__c</fullName>
    <label>Delivery Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>