force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone__c</fullName>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>