force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Plastic_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plastic_Id__c</fullName>
    <label>Plastic Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>