force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Received_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FEC_Received_DateTime__c</fullName>
    <label>Received DateTime</label>
    <type>DateTime</type>
</CustomField>