force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Request_ID__c</fullName>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>