force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Source_System__c.field-meta.xml
<CustomField>
    <fullName>FEC_Source_System__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>