force-app/main/default/objects/FEC_Undelivered_Card__c/fields/FEC_Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Tracking_No__c</fullName>
    <label>Tracking No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>